--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <canvas id = "background"></canvas>
+    <form id = "form">
+      <input type = "text" id = "input" placeholder = "Enter your name">
+      <button type = "submit">Submit</button>
+    </form>
     <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/form.ts"></script>
+    <script type="module" src="/src/background.ts"></script>
   </body>
 </html>
